--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ section{
     flex-direction: column;
     display: flex;
     justify-content: flex-start;
-    background: url('images/bg2.jpg')no-repeat;
+    background: url('https://scontent.xx.fbcdn.net/v/t1.15752-9/316647083_537511591238922_5409413356877750235_n.jpg?stp=dst-jpg_p206x206&_nc_cat=103&ccb=1-7&_nc_sid=aee45a&_nc_eui2=AeGxqjWp6tIDmqjHPX0YxH7JN1-pywXOX1Y3X6nLBc5fVlciNn2HwuguK49q3IkKnw6f04AHaSHTfK4n2aIGB_Xp&_nc_ohc=QSpNDIU57tAAX8suJ3V&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdTy92iphUCaBgLE3iDvfJnnhfZh5r_RUG6Npn4XI8ajHQ&oe=63CA7B8F')no-repeat;
     background-size: cover;
     background-position: center;
 }
