--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ section{
     flex-direction: column;
     display: flex;
     justify-content: flex-start;
-    background: url('https://scontent.xx.fbcdn.net/v/t1.15752-9/316647083_537511591238922_5409413356877750235_n.jpg?stp=dst-jpg_p206x206&_nc_cat=103&ccb=1-7&_nc_sid=aee45a&_nc_eui2=AeGxqjWp6tIDmqjHPX0YxH7JN1-pywXOX1Y3X6nLBc5fVlciNn2HwuguK49q3IkKnw6f04AHaSHTfK4n2aIGB_Xp&_nc_ohc=QSpNDIU57tAAX8suJ3V&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdTy92iphUCaBgLE3iDvfJnnhfZh5r_RUG6Npn4XI8ajHQ&oe=63CA7B8F')no-repeat;
+    background: url('https://previews.dropbox.com/p/thumb/ABwc9LzocGodjhabn9gaZHQRgmJj4Qsp2jfhma6ap1dUwKN8cBcRi-YhKg9udctqwTH_FwFjl4QZtfmniOcDq-DX7qkqL7tOFU-N6PR33KZTQuBhmQ_hl_frmTOWJ2xWRDBaY87IosQq_hNTNRMhcToGxq1bJ-zR-gHNBMQfq7Vrs9aw_45NvMtCdTyHskCGurYKupkEBNvl-yNM1vBNmE1kRcfBwaOT1L4CHvQP87ZL1dNK8Gf7qkHiZZD0jpYqQejSHk9kLa4-nZ5IViHLRW9y-siSCcJYRN5jndAXV7wpCNKcoXvlBe9XxK7yTFNL-NZAI1m5A-FECkw9ycQDcmuev8TY33OI29HaJAVsKdSzBJH8s33KCYNwj4oc1Ri_R-HWm4WOzTKOfRdsjjjrbCEqBC7ve3DI6US9riK5b4jYZgX12wbB82iwGz7pibYS6j7Ln960q818gsORZJAUxZ667qe97S7rYAzUR__BSfY7_wEC35SktSGaZTrbA1Kw3U9A2Xd5TczEFm3sZ-6KM5oGPw7UiVv-e7y-Sgl97D9QU5WrUT-Kc9N_cH3vh-0WRX2z9lh35JymkyMTAyas29fZ/p.jpeg')no-repeat;
     background-size: cover;
     background-position: center;
 }
