--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ section{
     flex-direction: column;
     display: flex;
     justify-content: flex-start;
-    background: url('https://previews.dropbox.com/p/thumb/ABwc9LzocGodjhabn9gaZHQRgmJj4Qsp2jfhma6ap1dUwKN8cBcRi-YhKg9udctqwTH_FwFjl4QZtfmniOcDq-DX7qkqL7tOFU-N6PR33KZTQuBhmQ_hl_frmTOWJ2xWRDBaY87IosQq_hNTNRMhcToGxq1bJ-zR-gHNBMQfq7Vrs9aw_45NvMtCdTyHskCGurYKupkEBNvl-yNM1vBNmE1kRcfBwaOT1L4CHvQP87ZL1dNK8Gf7qkHiZZD0jpYqQejSHk9kLa4-nZ5IViHLRW9y-siSCcJYRN5jndAXV7wpCNKcoXvlBe9XxK7yTFNL-NZAI1m5A-FECkw9ycQDcmuev8TY33OI29HaJAVsKdSzBJH8s33KCYNwj4oc1Ri_R-HWm4WOzTKOfRdsjjjrbCEqBC7ve3DI6US9riK5b4jYZgX12wbB82iwGz7pibYS6j7Ln960q818gsORZJAUxZ667qe97S7rYAzUR__BSfY7_wEC35SktSGaZTrbA1Kw3U9A2Xd5TczEFm3sZ-6KM5oGPw7UiVv-e7y-Sgl97D9QU5WrUT-Kc9N_cH3vh-0WRX2z9lh35JymkyMTAyas29fZ/p.jpeg')no-repeat;
+    background: url('https://img.freepik.com/free-photo/psychedelic-paper-shapes-with-copy-space_23-2149378246.jpg?size=626&ext=jpg&ga=GA1.2.1651796488.1671539697&semt=sph')no-repeat;
     background-size: cover;
     background-position: center;
 }
