--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ section{
     flex-direction: column;
     display: flex;
     justify-content: flex-start;
-    background: url('https://img.freepik.com/free-photo/psychedelic-paper-shapes-with-copy-space_23-2149378246.jpg?size=626&ext=jpg&ga=GA1.2.1651796488.1671539697&semt=sph')no-repeat;
+    background: url('images/bg2.jpg')no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -171,6 +171,11 @@ label{
     }
     label .menu-btn{
         position: absolute;
+        margin-left: 50px;
+    }
+    label .close-btn{
+        position: absolute;
+        margin-left: 50px;
     }
     header .logo{
         position: absolute;
